--- a/Theif/Index.html
+++ b/Theif/Index.html
@@ -24,7 +24,7 @@ window.location = "Theme.html";
 startBtn.center();
 
 
-var info_text = new sjs.Text("Created By Steven Crandall",20,"green");
+var info_text = new sjs.Text("Created By Steven Crandall Take Over Smaller Coats",20,"green");
 
 info_text.bottom().centerH();
 
